[package]
name = "murray"
version = "0.4.0"
edition = "2021"
description = "A minimal actor definition macro using Tokio"

repository = "https://github.com/chbm/murray"
homepage = "https://github.com/chbm/murray"
documentation = "https://docs.rs/murray/"
readme = "README.md"
license = "MIT"
keywords = ["actor", "async", "messages", "supervisor"]
categories = ["asynchronous", "concurrency"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
